force-app/main/default/objects/Lead/fields/classificacaoLead__c.field-meta.xml
<CustomField>
    <fullName>classificacaoLead__c</fullName>
    <label>Classificação do Lead</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interessado</fullName>
            </value>
            <value>
                <fullName>Sem Interesse</fullName>
            </value>
            <value>
                <fullName>Sem contato</fullName>
            </value>
            <value>
                <fullName>Retornar depois</fullName>
            </value>
            <value>
                <fullName>Lead Inválido</fullName>
            </value>
            <value>
                <fullName>Sem Perfil</fullName>
            </value>
            <value>
                <fullName>R$1M+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>