force-app/main/default/objects/Lead/fields/maisdeMilhao__c.field-meta.xml
<CustomField>
    <fullName>maisdeMilhao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead tem mais de R$1M?</label>
    <type>Checkbox</type>
</CustomField>