force-app/main/default/objects/Lead/fields/naoAtendeu__c.field-meta.xml
<CustomField>
    <fullName>naoAtendeu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Não atendeu</label>
    <type>Checkbox</type>
</CustomField>