force-app/main/default/objects/Lead/fields/quantasVezesLeadNaoAtendeu__c.field-meta.xml
<CustomField>
    <fullName>quantasVezesLeadNaoAtendeu__c</fullName>
    <label>Não atendeu (Qtd)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>